<resources>
    <string name="app_name">DPhone</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="actionbar_step_one">第一步: 填写手机号</string>
    <string name="actionbar_step_two">第二步: 填写验证号码</string>
    <string name="actionbar_step_three">第三步: 填写个人信息</string>
    <string name="rest_psw">重置密码</string>
    <string name="county_code">+86  中国</string>
    <string name="phone_code">+86</string>
    <string name="phone_num_hint">请输入手机号码</string>
    <string name="psw_hint">请输入密码</string>
    <string name="next_step">下一步</string>
    <string name="next_prompt">点击下一步表示你已经阅读并同意</string>
    <string name="dolphin_note">《海豚服务协议》</string>
    <string name="send_note">已发送验证码到您的手机：</string>
    <string name="verification_code">验证码</string>
    <string name="verification_hint">请输入验证码</string>
    <string name="rest_send">重新发送</string>
    <string name="second_rest_send">(%1$2d秒后)重新发送</string>
    <string name="psw_forget">忘记密码?</string>
    <string name="nick_name">昵称</string>
    <string name="nick_name_note">例如： 张三</string>
    <string name="sex">性别</string>
    <string name="birthday">出生年月</string>
    <string name="login_psw">登录密码</string>
    <string name="psw_note">填写登陆密码</string>
    <string name="city">所在城市</string>
    <string name="city_gps">正在定位所在城市&#8230;</string>
    <string name="city_gps_fail">定位失败</string>
    <string name="psw_rule">请使用6位以上字母或是数字密码</string>
    <string name="submit">提交</string>
    <string name="new_psw">新密码</string>
    <string name="new_psw_hint">请输入新的密码</string>
    <string name="more">更多</string>
    <string name="change_city">却换城市</string>
    <string name="hot_city">热门城市</string>
    <string name="gps_city">定位城市</string>
    <string name="fail_name_exist">注册失败:用户名已存在</string>
    <string name="name_exist">用户名已存在</string>
    <string name="fail_unknow">注册失败:未知原因</string>
    <string name="login_fail">用户名不存在或密码错误</string>
    <string name="login_init">正在初始化</string>
    <string name="psw_short_fail">密码长度不符合要求</string>
    <string name="nickname_fail">昵称不能为空</string>
    <string name="vercode_send_succ">消息发送成功</string>
    <string name="vercode_send_fail">消息发送失败</string>
    <string name="vercode_succ">验证成功</string>
    <string name="vercode_fail">验证失败</string>
    <string name="login_processing">登录中&#8230;</string>
    <string name="modify_psw_succ">密码修改成功</string>
     <string name="modify_psw_ng">密码修改失败</string>
    <string name="login_fail_1100">服务器连接RTC服务器失败</string>
     <string name="login_ng">登录失败</string>
    <string name="login_fail_1103">用户不存在或密码错误</string>
    <string name="blink">请求连接</string>
    <string name="bapply">请求加入</string>
    <string name="binvite">邀请你加入</string>
    <string name="bmanaget">请你管理</string>
    <string name="invitegroup">邀请您加入群聊</string>
    <string name="invitemeeting">邀请您加入会议</string>
    <string name="invitechat">请求与您通话</string>
    <string name="sd_data">SD卡数据</string>
    <string name="voice_remind">语音提醒</string>
    <string name="system_language">Language 语言</string>
    <string name="face_tracer">人脸追踪</string>
    <string name="standby_setting">待机设置</string>
    <string name="info_setting">资讯设置</string>
    <string name="photo_display">显示照片信息栏</string>
    <string name="watching_remind">观看提醒</string>
    <string name="extention_setting">扩展设备设置</string>
    <string name="date_time">时间与日期</string>
    <string name="most_care">紧急联系人</string>
    <string name="broadcast_weather">定时播报天气</string>
    <string name="weather_hint">定时播报本地天气情况</string>
    <string name="broadcast_time1">播报时间1</string>
    <string name="broadcast_time2">播报时间2</string>
    <string name="dolphin">海豚</string>
    <string name="msg">消息</string>
    <string name="dolphin_setting">设置海豚</string>
    <string name="let_download">让亲友下载</string>
    <string name="feed_back">快速反馈</string>
    <string name="initiate_chat">邀请群聊</string>
    <string name="setting_note">设置备注</string>
    <string name="no_none">不能为空</string>
    <string name="actionbar_info">详细信息</string>
    <string name="info_place">地区</string>
    <string name="info_contact">紧急联系人</string>
    <string name="info_modify_nickname">修改昵称</string>
    <string name="info_modify_head">更换头像</string>
    <string name="info_age">年龄</string>
    <string name="info_moment">个人瞬间</string>
    <string name="privacy_mode">隐私模式</string>
    <string name="info_finish">完成</string>
    <string name="actionbar_note">设置备注</string>
    <string name="actionbar_nick">修改昵称</string>
    <string name="info_new_note">新备注名</string>
    <string name="info_new_nick">新的昵称</string>
    <string name="choose_device">选择海豚</string>
    <string name="calling_hangup">挂断</string>
     <string name="calling_accept">挂断</string>
    <string name="calling_msg">正在呼叫</string>
    <string name="choose_admin">选择新的管理员</string>
    <string name="turn_over">移交</string>
    <string name="quit_family">退出该群</string>
    <string name="number_type">海豚号/手机号</string>
    <string name="hint_devicenumber">海豚号</string>
    <string name="search">搜索</string>
    <string name="search_">搜索：</string>
    <string name="search_result">搜索结果</string>
    <string name="account_inexistence">用户不存在</string>
     <string name="account_null">账号输入不能为空</string>
    <string name="invite_join">邀他加入</string>
    <string name="want_join">我要加入</string>
    <string name="want_link">我要连接</string>
    <string name="familyuser_exist">已经为家庭组成员</string>
    <string name="addphone_contact">添加手机联系人</string>
    <string name="link_device">连接两台海豚</string>
    <string name="remote_control">远程管理</string>
    <string name="senior_setting">高级选项</string>
    <string name="about_dolphin">关于海豚</string>
    <string name="standbymodelsetting">待机模式设置</string>
    <string name="msgsetting">资讯设置</string>
    <string name="remote_contacts">紧急联系人</string>
    <string name="str_today">今天</string>
    <string name="str_yesterday">昨天</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_album">AlbumActivity</string>
    <string name="title_activity_share">ShareActivity</string>
    <string name="title_activity_upload">UploadActivity</string>
    <string name="title_activity_del">DelActivity</string>
    <string name="data_time">时间与日期</string>
    <string name="auto">自动同步</string>
    <string name="album">相册</string>
    <string name="delete">删除</string>
    <string name="SelectAll">全选</string>
    <string name="picture">图片</string>
    <string name="finish_zero">完成0/4</string>
    <string name="Allpicture">所有图片</string>
    <string name="send">發送</string>
    <string name="watch">点击观看</string>
    <string name="call">通话</string>
    <string name="send_photo">推照片</string>
    <string name="setting">设置</string>
    <string name="my_home">我的家</string>
    <string name="video">视频</string>
    <string name="photo">照片</string>
    <string name="myhome">myhome</string>
    <string name="online">在线</string>
    <string name="checking">查询中</string>
    <string name="ShaoweiWan">万绍伟</string>
    <string name="our_staff">我方人员</string>
    <string name="my">我的</string>
    <string name="new_contacts">新的联系人</string>
    <string name="share_photo">照片分享</string>
    <string name="housekeeping_assistant">看家助手</string>
    <string name="dynamic">动态</string>
    <string name="current_group">当前群组</string>
    <string name="cancel">取消</string>
    <string name="conform">确定</string>
    <string name="calling">呼叫</string>
    <string name="user_AA">用户AA</string>
    <string name="invisible_sentry_home">. 暗哨的家</string>
    <string name="lovestruck">爱神的箭</string>
    <string name="Is_calling_you">正在呼叫您。。。</string>
    <string name="answer">接听</string>
    <string name="refuse">拒绝</string>
    <string name="service_agreement">xxxxx服务协议</string>
    <string name="agreement">xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
       xxxxxxxxxxxxxxxxxxxxxxxxx</string>
    <string name="close">关闭</string>
    <string name="weixin">微信</string>
    <string name="circle_of_friends">朋友圈</string>
    <string name="sms">短信</string>
    <string name="download_dolphin">扫描二维码，下载海豚应用</string>
    <string name="test_string">测试文字</string>
    <string name="user_A">用户A</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="tell_me">有人观看通知我</string>
    <string name="remote_setting">远程管理</string>
    <string name="wsgdxg">万烧光的小窝</string>
    <string name="nick_name_wsgdxg">昵称：万烧光的小窝</string>
    <string name="electricity">电量</string>
    <string name="percent">5%</string>
    <string name="network_state">网络状态</string>
    <string name="good">良好</string>
    <string name="load_more">加载更多...</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="location_gps">正在定位所在位置..</string>
    <string name="new_">NEW</string>
    <string name="add_friend">添加朋友</string>
    <string name="myusername">橘子花</string>
    <string name="myInfo">个人信息</string>
    <string name="headicon">头像</string>
    <string name="age">年龄</string>
    <string name="location">地区</string>
    <string name="finish">完成</string>
    <string name="nickname_change">修改昵称</string>
    <string name="new_nickname">新的昵称</string>
    <string name="personalmoment">个人瞬间</string>
    <string name="accompanytime">陪伴时间</string>
    <string name="statistcs_rank">本周排行</string>
    <string name="secondpsw">二级密码</string>
    <string name="spsw_introduce">二级密码是限制敏感操作，保护海豚隐私的功能。每条海豚只有一个二级密码，有管理员负责设置与管理.管理员可以把二级密码共享给海豚组其他用户</string>
    <string name="secondpswsetting">设置二级密码</string>
    <string name="secondpswreset">重置二级密码</string>
    <string name="secondpswmodify">修改二级密码</string>
    <string name="protect_by_spw">已受二级密码的保护</string>
    <string name="not_set">未设置</string>
    <string name="old_psw">原密码</string>
    <string name="new_spsw">新二级密码</string>
    <string name="forget_spsw">忘记二级密码？</string>
    <string name="message_alert">消息提醒</string>
    <string name="pswsetting">修改密码</string>
    <string name="language">语言Language</string>
    <string name="about">关于</string>
    <string name="nolinke_device">无可连接的海豚</string>
    <string name="log_off">注销</string>
    <string name="quit">退出</string>
    <string name="feedback">快速反馈</string>
    <string name="message_notification">通知栏提示</string>
    <string name="message_tips1">关闭后通知栏不再提示消息</string>
    <string name="message_voice">声音</string>
    <string name="message_tips2">关闭后不再有消息提示音</string>
    <string name="warning_tone">提示音</string>
    <string name="newpsw">新的密码</string>
    <string name="confirm_psw">确认密码</string>
    <string name="check_version">检查新版本</string>
    <string name="about_function">功能介绍</string>
    <string name="problem_help">问题与帮助</string>
    <string name="counsel">客服电话</string>
    <string name="services_protocol">服务协议</string>
    <string name="protocol_note1">Copyright©2016惠州市伟乐科技股份有限公司</string>
    <string name="protocol_note2">All rights reserved</string>
    <string name="invitedownload">让亲友下载</string>
    <string name="send_link">发送下载链接</string>
    <string name="ac_note1">本周已陪伴</string>
    <string name="ac_note2">分钟</string>
    <string name="ac_note3">过去7天的陪伴</string>
    <string name="msg_title">伟乐科技</string>
    <string name="msg_description">伟乐科技</string>
    <string name="modify_succeed">修改成功</string>
    <string name="modify_fail">修改失败</string>
    <string name="psw_not_equal">新密码不一致，请重新输入</string>
    <string name="psw_not_null">新密码为空，请重新输入</string>
    <string name="psw_not_right">密码错误，请重新输入</string>
    <string name="psw_not_long">新密码长度不对，请重新输入</string>
    <string name="level5">信号极强</string>
    <string name="level4">信号较强</string>
    <string name="level3">信号强</string>
    <string name="level2">信号较弱</string>
    <string name="level1">信号极弱</string>
    <string name="level0">没有信号</string>
    <string name="watch_notification">有人观看通知我</string>
	 <string name="this_time">瞬间</string>
	 <string name="look_home_alumb">相册</string>
	 <string name="look_home">看家助手</string>
	 <string name="move_state">动态</string>
</resources>