<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" 
    android:clickable="true">

    <include
        android:id="@+id/actionbar"
        layout="@layout/actionbar_custom2" />

    <com.wellav.dolphin.mmedia.ui.CircleImageView
        android:id="@+id/headicon"
        android:layout_width="96.0dp"
        android:layout_height="96.0dp"
        android:layout_below="@+id/actionbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:src="@drawable/ic_defaulthead_male_40dp" />

    <TextView
        style="@style/H2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headicon"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/nick_name" />

    <EditText
        android:id="@+id/nick_name"
        style="@style/H3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/headicon"
        android:layout_marginRight="16dp"
        android:layout_marginTop="32dp"
        android:paddingRight="8dp"
        android:background="@null"
        android:gravity="right"
        android:hint="@string/nick_name_note"
        android:maxLength="13"
        android:paddingLeft="20dp"
        android:textColorHint="@color/color105" 
        android:singleLine="true" />

    <View
        android:id="@+id/view1"
        style="@style/Line3"
        android:layout_below="@+id/nick_name"
        android:layout_marginTop="8dp" />

    <TextView
        style="@style/H2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view1"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/sex" />
    
        <RadioGroup
        android:id="@+id/cilent_sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view1"
        android:layout_marginRight="16dp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="16dp"
           android:paddingRight="8dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/btnMan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
             style="@style/H3"
            android:text="男" />

        <RadioButton
            android:id="@+id/btnWoman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
             style="@style/H3"
            android:text="女" />
    </RadioGroup>



    <View
        android:id="@+id/view2"
        style="@style/Line3"
        android:layout_below="@+id/cilent_sex"
        android:layout_marginTop="8dp" />

    <TextView
        style="@style/H2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view2"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/birthday" />
    
    <TextView 
        android:id="@+id/cilent_born"
        style="@style/H3"
        android:layout_height="wrap_content"
        android:layout_width="200dp"
        android:layout_below="@+id/view2"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:paddingRight="8dp"
        android:gravity="right"
        android:clickable="true"
        android:background="@null"
        
        />

    <View
        android:id="@+id/view3"
        style="@style/Line3"
        android:layout_below="@+id/cilent_born"
        android:layout_marginTop="8dp" />
    
        <TextView
        style="@style/H2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view3"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/city" />

    <TextView
        android:id="@+id/cilent_place"
        style="@style/H3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/view3"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:gravity="right"
        android:maxLength="13"
        android:paddingRight="8dp"
        android:clickable="true"
        android:text="@string/city_gps" />

    <View
        android:id="@+id/view4"
        style="@style/Line3"
        android:layout_below="@+id/cilent_place"
        android:layout_marginTop="8dp" />

    <TextView
        style="@style/H2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view4"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/login_psw" />

    <EditText
        android:id="@+id/cilent_password"
        style="@style/H3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view4"
        android:layout_marginRight="8dp"
        android:layout_marginTop="32dp"
        android:layout_toLeftOf="@+id/pswvisible"
        android:background="@null"
        android:gravity="right"
        android:hint="@string/psw_note"
        android:maxLength="13"
        android:password="true"
        android:textColorHint="@color/color105" 
        android:singleLine="true" />

    <CheckBox
        android:id="@+id/pswvisible"
        android:layout_width="34dp"
        android:layout_height="28dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/view4"
        android:layout_marginRight="16dp"
        android:layout_marginTop="32dp"
        android:button="@drawable/checkbox_psw"/>

    <View
        android:id="@+id/view5"
        style="@style/Line3"
        android:layout_below="@+id/cilent_password"
        android:layout_marginTop="8dp" />



    <TextView
        android:id="@+id/psw_rule"
        style="@style/H11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view5"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/psw_rule" />

    <Button
        android:id="@+id/submit"
        style="@style/H1"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/psw_rule"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/buttonblue_shap"
        android:text="@string/submit" />

</RelativeLayout>